name:                utf8-escape
version:             0.0.1
synopsis:            Escape utf8-characters for html and latex
description:         Please see README.md
homepage:            http://github.com/michelk/html-escape#readme
license:             BSD3
license-file:        LICENSE
author:              Michel Kuhlmann
maintainer:          michel@kuhlamnns.info
copyright:           BSD3
category:            None
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs: src
  exposed-modules: UTF8escape
  build-depends: base, text
  ghc-options: -funbox-strict-fields
  default-extensions:
  default-language: Haskell2010

executable utf8-escape
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , utf8-escape
                     , optparse-applicative
                     , text
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/michelk/html-escape
